fix on overflow

--- a/styles/products.module.scss
+++ b/styles/products.module.scss
@@ -43,6 +43,7 @@
   opacity: 0;
   background-color: rgba(0, 0, 0, 0.5);
   transition: all 0.5s;
+  overflow: auto;
   .modalItem {
     display: none;
     position: absolute;
